--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div class="form ">
   <div class="userInbox_are">
 
-  <input class="userBox" type="text" placeholder="type favorite name">
+  <input class="userBox" type="text" placeholder="type favorite name only English">
   <input class="sendBox" type="button" value="view" onclick=" sendUserName()">
   </div>
   <P style="color: white;">Share with the facebook</P>
@@ -114,7 +114,7 @@
 
 <audio id="myaudio"  autoplay  loop src="./image/audio.mp3"></audio>
   
-<p style="color: white; margin: auto; text-align: center;">saddam <a href="https://www.facebook.com/freelancer.saddam.developer">FB</a></p>
+<p style="color: white; margin: auto; text-align: center;">It is owned by Saddam <a href="https://www.facebook.com/freelancer.saddam.developer">FB</a></p>
   <br>
 
 </footer>
